--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 </head>
 
 <body>
-  <header>
     <h1>Connect Four!</h1>
-  </header>
   <div id="game">
     <table id="board"></table>
   </div>
 
+  <form>
+    <input type="button" id="reset" value="Play Again?">
+  </form>
   <script src="connect4.js"></script>
 
 </body>
